# texrec

./: README.md  pyproject.toml  requirements.txt
texrec/: __init__.py  constants.py  model.py  texrec.py
texrec.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
texrec/engine/: model.py
texrec/reconstructor/: _texrec_model.pt  model.py  texrec.py
texrec/reconstructors/: __init__.py  model.py  texrec.py
texrec/utils/: __init__.py  constants.py  dataloader.py  dataset.py  loader.py  preprocessing.py
